--- a/RepresentativeAsMentor/Base.lproj/Main.storyboard
+++ b/RepresentativeAsMentor/Base.lproj/Main.storyboard
@@ -23,6 +23,9 @@
                                     <frame key="frameInset" width="375" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="M5p-vB-5R7" kind="show" identifier="listToDetailSegue" id="frg-7z-lAz"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -46,7 +49,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="stateDetailCell" rowHeight="186" id="VRU-7F-w3D" customClass="StateDetailTableViewCell" customModule="RepresentativeAsMentor" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="186"/>
+                                <rect key="frame" x="0.0" y="92" width="375" height="186"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="VRU-7F-w3D" id="ABb-ZG-2Pc">
                                     <frame key="frameInset" width="375" height="185"/>
